--- a/App/index.html
+++ b/App/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="./src/assets/favicon.ico" type="image/x-icon">
+    <meta name="theme-color" content="#262626">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
